<resources>
    <string name="app_name">GangChat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Kirill Spasov</string>
    <string name="settings_default_status">В сети</string>
    <string name="settings_text_accout">аккаунт</string>
    <string name="setting_text_accout">Аккаунт</string>
    <string name="setting_default_number">+799999999</string>
    <string name="setting_lable_phone_number">нажмите чтобы изменить номер телефона</string>
    <string name="settings_default_login">KirillSpasov</string>
    <string name="setting_lable_login">Имяпользывателя</string>
    <string name="settings_default_bio">о себе</string>
    <string name="setting_lable_bio">Напишите немного о себе</string>
    <string name="setting_menu_change_name">изменить имя</string>
    <string name="settings_menu_exit">выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите Код</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш Телефон</string>
    <string name="register_toast_enter_phone">введите телефон</string>
    <string name="register_phone_hint">--------------</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">имя не может быть пустым</string>
    <string name="toast_data_update">Данные Обновлены</string>
    <string name="settings_hint_username">username</string>
    <string name="settings_input_bio">bio</string>
    <string name="time_cloak">21:45</string>
</resources>